Created new widget "tag_envents" based on "mug_stats_live" Used moment.js for dates and times (french format) Now displaying the list of events with possible pagination Now displaying left spot and price if any Changed links to my group and added link to my facebook page.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 api_key.js
+.idea
+Supprimerait .idea/atlassian-ide-plugin.xml
+Supprimerait .idea/modules.xml
+Supprimerait .idea/widgets.iml
+Supprimerait .idea/workspace.xml
